# Useful-Functions

./: CMakeLists.txt  readme.md
docs/: Doxyfile
docs/html/: container_output_8cpp.html  container_output_8cpp__incl.map  container_output_8cpp__incl.md5  dir_1b182fdb6d386f07d701077b8bcb2314.html  files.html  files_in_dir_8cpp.html  files_in_dir_8cpp__incl.map  files_in_dir_8cpp__incl.md5  find_k_mins_8cpp.html  find_k_mins_8cpp__incl.map  find_k_mins_8cpp__incl.md5  format_value_8cpp.html  format_value_8cpp__incl.map  format_value_8cpp__incl.md5  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  linear_trans_8cpp.html  linear_trans_8cpp__incl.map  linear_trans_8cpp__incl.md5  macro_launcher_8cpp.html  macro_launcher_8cpp__incl.map  macro_launcher_8cpp__incl.md5  menudata.js  output_format_8cpp.html  output_format_8cpp__incl.map  output_format_8cpp__incl.md5  read_string_8cpp.html  read_string_8cpp__incl.map  read_string_8cpp__incl.md5  string_splitor_8cpp.html  string_splitor_8cpp__incl.map  string_splitor_8cpp__incl.md5
docs/latex/: files.tex  (+20 more)
drawer/: kmeans++.py
src/: bytes.cpp  coordinate.cpp  enum_cast.hpp  julian.cpp  kbest.cpp  kmeans++.cpp  lagrange.cpp  libmacroes.cpp  listfiles.cpp  macrolauncher.cpp  plt_utils.py  readfilestring.cpp  sampling.cpp  stringsplitor.cpp  super_pixel.cpp  timer.cpp  trap_integration.cpp  trim.cpp
src_funs/: containerOutput.cpp  filesInDir.cpp  findKMins.cpp  formatValue.cpp  linearTrans.cpp  macro.cpp  outputFormat.cpp  stringSplitor.cpp  structGenerator.cpp  val2String.cpp
(+26 files in other folders)
